turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:64: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
  rule= Array( Array( Array(1,RIGHT,0), Array(1,RIGHT,1)),Array( Array(0,NOTURN,0), Array(0,NOTURN),1));
                                                                                                    ^